# merge_sort

./: .gitignore  CMakeLists.txt  readme.md
modules/: sorter.ixx
source/: main.cpp
